# biotracker_gui

./: CMakeLists.txt  README.md
biotracker/: AlgorithmSelectionWidget.h  BioTracker3MainWindow.h  BioTracker3VideoControllWidget.h  BioTracker3VideoView.h  CMakeLists.txt  Gui.h  MainWindow.h  NotificationWidget.h  VideoControlWidget.h  VideoView.h
biotracker/View/: BioTracker3MainWindow.cpp  BioTracker3MainWindow.h  BioTracker3VideoControllWidget.cpp  BioTracker3VideoControllWidget.h  BioTracker3VideoControllWidget.ui  BioTracker3VideoView.cpp  BioTracker3VideoView.h  GraphicsView.cpp  GraphicsView.h  TrackedElementView.cpp  TrackedElementView.h  TrackedImageView.cpp  TrackedImageView.h
biotracker/src/: AlgorithmSelectionWidget.cpp  AlgorithmSelectionWidget.ui  BioTracker3MainWindow.cpp  BioTracker3VideoControllWidget.cpp  BioTracker3VideoControllWidget.ui  BioTracker3VideoView.cpp  Gui.cpp  MainWindow.cpp  MainWindow.ui  NotificationWidget.cpp  VideoControlWidget.cpp  VideoControlWidget.ui  VideoView.cpp  main.cpp
